# untaped-github

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  orchestration.yml  release.yml
.untaped/orchestration/: registry.toml  store.toml
.untaped/orchestration/decisions/: dec_019f68bd288376be90c3a91edf4de3ae-sweep-is-question-first-over-a-local-corpus-the-corpus-is-the-en.md  (+9 more)
docs/: decisions.md  github.md  release.md
docs/orchestration-migration/: coverage.toml  historical-inputs.toml  import.toml  review.md
scripts/: release.py
src/untaped_github/: __init__.py  __main__.py  _concurrency.py  plugin.py  settings.py
src/untaped_github/application/: cache.py  (+10 more)
tests/unit/: test_batch_repo_refs.py  test_cache_cli.py  test_cache_use_cases.py  test_ci_workflow.py  test_cli.py  test_cli_scopes.py  test_codeowners.py  test_config.py  test_format_raw_first_key.py  test_git_corpus.py  test_github_client.py  test_layering.py  test_orchestration_adoption.py  test_pagination.py  test_path_patterns.py  test_plugin_entrypoint.py  test_public_surface.py  test_queries.py  test_release_caller.py  test_release_helper.py  test_release_workflow.py  test_repo_filters.py  test_repos_cli.py  test_repos_use_cases.py  test_result_models.py  test_scan_cli.py  test_scan_use_cases.py  test_search_cli.py  test_search_use_cases.py  test_settings.py  test_sweep_cli.py  test_sweep_cli_redesign.py  test_sweep_domain.py  test_sweep_matching.py  test_sweep_output.py  test_sweep_use_case.py  test_tool_entrypoint.py  test_whoami_use_case.py
(+51 files in other folders)
