[project]
name = "untaped-github"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alexis Beaulieu", email = "alexisbeaulieu97@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.3",
    "typer>=0.25.1",
    "untaped",
]

[project.entry-points."untaped.plugins"]
github = "untaped_github.plugin:plugin"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
untaped = { workspace = true }
